syntax = "proto3";

package kafka;

option go_package = "specommerce/orderservice/model";


message ProcessPaymentRequest {
  string order_id = 1;
  string customer_id = 2;
  double total_amount = 3;
  int64 time_process = 4;
}

message ProcessPaymentResponse {
  string payment_id = 1;
  string order_id = 2;
  string customer_id = 3;
  double total_amount = 4;
  string payment_status = 5;
}